Se sube el repo proyecto base

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-/app/config/parameters.yml
-/build/
-/phpunit.xml
-/var/*
-!/var/cache
-/var/cache/*
-!var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
-/var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+#/app/bootstrap.php.cache
+/app/cache/*
+!app/cache/.gitkeep
+#/app/config/parameters.yml
+/app/logs/*
+!app/logs/.gitkeep
+/app/phpunit.xml
+/bin/
+#/composer.phar
+/src/Backend/*
+!src/Backend/.gitkeep
+/src/Core/*
+!src/Core/.gitkeep
+/src/App/*
+!src/App/.gitkeep
 /vendor/
 /web/bundles/
+/nbproject/
