--- a/src/App/AppBundle/Resources/config/routing.yml
+++ b/src/App/AppBundle/Resources/config/routing.yml
@@ -1,4 +1,8 @@
 app_homepage:
+    path:     /
+    defaults: { _controller: AppBundle:Default:index }
+    
+app_homepage2:
     path:     /{nombre}
     defaults: { _controller: AppBundle:Default:index }
 
