--- a/src/App/AppBundle/Resources/config/routing.yml
+++ b/src/App/AppBundle/Resources/config/routing.yml
@@ -6,3 +6,7 @@ app_homepage2:
     path:     /{nombre}
     defaults: { _controller: AppBundle:Default:index }
 
+app_confirmation:
+    path:     /
+    defaults: { _controller: AppBundle:Default:confirm }
+
